--- a/portfolio/styles/styles.css
+++ b/portfolio/styles/styles.css
@@ -1,11 +1,3 @@
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Roboto Thin'), local('Roboto-Thin'), url(https://fonts.gstatic.com/s/roboto/v15/ty9dfvLAziwdqQ2dHoyjphTbgVql8nDJpwnrE27mub0.woff2) format('woff2');
-  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-}
-
 .hero {
 	font-family: "Roboto", Serif;
 	text-align: center;
@@ -28,12 +20,12 @@
 	text-shadow: 0px 5px 5px rgba(0,0,0,.25);	
 }
 
-.hero h1 {
+#intro h1 {
 	font-size: 72px;
 	line-height: 55px;
 }
 
-.hero h5 {
+#intro h5 {
 	margin-bottom: 20px;
 	font-size: 24px;
 	font-weight: 700;
@@ -44,7 +36,7 @@
 }
 
 .cta {
-	background-color: black;
+	background: black;
 	color: white;
 	padding: 0px;
 	width: 180px;
@@ -52,6 +44,7 @@
 	line-height: 50px;
 	border-radius: 4px;
 	cursor: pointer;
+	border: none;
 }
 
 .cta:hover {
@@ -63,7 +56,7 @@
 }
 
 .left-col {
-	color: #00CFFF;
+	color: #00E2AC;
 	padding: 20px;
 	text-transform: uppercase;
 	text-align: right;
@@ -79,7 +72,7 @@
 
 .right-col {
 	padding: 20px;
-	text-align: right;
+	text-align: left;
 }
 
 .right-col h5 {
@@ -87,11 +80,11 @@
 	line-height: 30px;
 }
 
-#gallery {
+.gallery {
 	background-color: #EEFDF9;
 }
 
-#gallery .container {
+.gallery.container {
 	padding: 0;
 	margin: 0;
 }
@@ -107,7 +100,7 @@
 	max-height: 380px;
 }
 
-.bridge {
+.hero.bridge {
 	background: url("../img/bridge/bridge.jpg") no-repeat center center;
 	width: 100%;
 }
@@ -160,12 +153,13 @@
 
 #footer .footer-item {
 	max-width: 100px;
-	flex: 1;
+	text-align: left;
 }
 
 #copyright {
 	color: #00E2AC;
 	text-align: right;
+	margin-left: auto;
 }
 
 #copyright span {
@@ -173,7 +167,7 @@
 	justify-content: flex-end;
 }
 
-@media (max-width: 480px) {
+@media only screen and (max-width: 480px) {
 	#intro {
 		min-height: 640px;
 	}
@@ -192,7 +186,7 @@
 	}
 }
 
-@media (max-width: 992px) {
+@media only screen and (max-width: 992px) {
 	.row {
 		width: 100%;
 	}
