--- a/portfolio/styles/main.css
+++ b/portfolio/styles/main.css
@@ -1,3 +1,208 @@
+.sidebar-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  width: 0px;
+  height: 100%;
+  padding-top: 10px;
+  font-family: 'Roboto', serif;
+  color: white;
+  background-color: black;
+  z-index: 2;
+  overflow: hidden;
+  transition: all 0.5s ease; }
+  .sidebar-wrapper h2 {
+    font-size: 40px;
+    line-height: 40px;
+    margin: 4px;
+    padding: 0px; }
+  .sidebar-wrapper a {
+    color: white;
+    font-size: 24px;
+    margin-left: 10px; }
+  .sidebar-wrapper.open {
+    width: 320px !important; }
 
+.sidebar-links {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+#close-btn {
+  margin-left: 30px;
+  margin-top: 10px;
+  align-self: flex-start;
+  color: white;
+  cursor: pointer; }
+  #close-btn:hover {
+    opacity: .5; }
+  #close-btn img {
+    height: 30px;
+    width: 30px; }
+
+#hamburger {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  height: 34px;
+  width: 40px;
+  left: 30px;
+  top: 20px;
+  border-radius: 4px;
+  background-color: black;
+  z-index: 1; }
+  #hamburger:hover {
+    background-color: #00CFFF; }
+  #hamburger img {
+    height: 30px;
+    width: 30px; }
+
+.hero {
+  font-family: "Roboto", Serif;
+  text-align: center;
+  min-height: 800px;
+  background-size: cover;
+  padding-bottom: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
+  .hero h2 {
+    margin: 100px 0 50px 0;
+    font-size: 40px;
+    line-height: 40px; }
+  .hero.landscape {
+    color: white; }
+  .hero.bridge {
+    background: url("../img/bridge/bridge.jpg") no-repeat center center;
+    width: 100%; }
+
+#intro h1, #intro h5 {
+  text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25); }
+#intro h1 {
+  font-size: 72px;
+  line-height: 55px; }
+#intro h5 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: 700; }
+
+.cta {
+  background: black;
+  color: white;
+  padding: 0px;
+  width: 180px;
+  font-size: 18px;
+  line-height: 50px;
+  border-radius: 4px;
+  cursor: pointer;
+  border: none; }
+  .cta:hover {
+    background: #00CFFF; }
+
+#about {
+  min-height: 0; }
+  #about .left-col {
+    color: #00E2AC;
+    padding: 20px;
+    text-transform: uppercase;
+    text-align: right; }
+    #about .left-col h2 {
+      margin-top: 0;
+      margin-bottom: 0;
+      font-size: 60px;
+      font-weight: 700;
+      line-height: 55px; }
+  #about .right-col {
+    padding: 20px;
+    text-align: left; }
+    #about .right-col h5 {
+      font-size: 24px;
+      line-height: 30px; }
+
+#gallery {
+  background-color: #EEFDF9; }
+  #gallery .container {
+    padding: 0;
+    margin: 0; }
+
+.col-md-4 {
+  overflow: hidden;
+  padding: 0 5px 10px 5px; }
+  .col-md-4 img {
+    height: 100%;
+    max-width: 390px;
+    max-height: 380px; }
+
+#contact {
+  text-align: center; }
+  #contact p {
+    text-align: center;
+    font-size: 24px;
+    max-width: 740px;
+    margin-bottom: 40px; }
+
+#social {
+  padding: 20px; }
+  #social a {
+    margin: 0px 10px;
+    text-decoration: none; }
+  #social img {
+    height: 20px; }
+    #social img:hover {
+      opacity: .5; }
+
+#footer {
+  height: 40px;
+  margin: 0 10%;
+  padding-bottom: 150px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
+  #footer .footer-item {
+    max-width: 100px;
+    text-align: left; }
+  #footer a {
+    margin: 0 20px 0 5px;
+    padding: 0;
+    font-size: 16px;
+    color: black;
+    line-height: 40px; }
+
+#copyright {
+  color: #00E2AC;
+  text-align: right;
+  margin-left: auto; }
+  #copyright span {
+    display: flex;
+    justify-content: flex-end; }
+
+@media only screen and (max-width: 480px) {
+  #intro {
+    min-height: 640px; }
+
+  .left-col h2 {
+    font-size: 42px;
+    line-height: 40px; }
+
+  #footer {
+    margin: 0 20px; }
+    #footer h4 {
+      padding-right: 20px; } }
+@media only screen and (max-width: 992px) {
+  .row {
+    width: 100%; }
+
+  .col-md-4 {
+    width: 100%; }
+    .col-md-4 img {
+      width: 100%;
+      max-width: 992px;
+      max-height: 900px; } }
 
 /*# sourceMappingURL=main.css.map */
