--- a/portfolio/styles/main.scss
+++ b/portfolio/styles/main.scss
@@ -3,6 +3,80 @@ $light-blue: #00CFFF;
 $light-green: #00E2AC;
 $light-gray: #EEFDF9;
 
+.sidebar-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: fixed;
+	width: 0px;
+	height: 100%;
+	padding-top: 10px;
+	font-family: 'Roboto', serif;
+	color: white;
+	background-color: black;
+	z-index: 2;
+	overflow: hidden;
+	transition: all 0.5s ease;
+	h2 {
+		font-size: 40px;
+		line-height: 40px;
+		margin: 4px;
+		padding: 0px;
+	}
+	a {
+		color: white;
+		font-size: 24px;
+		margin-left: 10px;
+	}
+	&.open {
+		width: 320px !important;
+	}
+}
+
+.sidebar-links {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#close-btn {
+	margin-left: 30px;
+	margin-top: 10px;
+	align-self: flex-start;
+	color: white;
+	cursor: pointer;
+	&:hover {
+		opacity: .5;
+	}
+	img {
+		height: 30px;
+		width: 30px;
+	}
+}
+
+#hamburger {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	height: 34px;
+	width: 40px;
+	left: 30px;
+	top: 20px;
+	border-radius: 4px;
+	background-color: black;
+	z-index: 1;
+	&:hover {
+		background-color: $light-blue;
+	}
+	img {
+		height: 30px;
+		width: 30px;
+	}
+}
+
 .hero {
 	font-family: "Roboto", Serif;
 	text-align: center;
